themes/hiswe-theme/sass/_variables.scss
///////
// COLORS
///////

$c-text: #445;

$c-border: #ddd;

$c-primary: hsl(200, 46%, 66%);
$c-primary-h: hue($c-primary);
$c-primary-s: saturation($c-primary);
$c-primary-lighter: hsl($c-primary-h, $c-primary-s, 82%);
$c-primary-lightest: hsl($c-primary-h, $c-primary-s, 95%);

$c-accent: #ff0078;
$c-accent-h: hue($c-accent);
$c-accent-s: saturation($c-accent);
$c-accent-lightest: hsl($c-accent-h, $c-accent-s, 95%);

$color-background: $c-primary-lightest;

$c-stripe-img: #fbfbfb;

///////
// FONTS
///////

$font-title: 'Sansita one', Georgia, serif;
$font-default: 'Kameron', Georgia, serif;

$font-serif: "Georgia", serif;
$font-mono: Monaco, Menlo, Consolas, Courier New, monospace;

///////
// SIZES
///////

$page-width: 1040px;
$page-width-max: 1300px;
$gutter: 30px;
$half-gutter: ($gutter / 2);
$quarter-gutter: ($gutter / 4);
$big-gutter: ($gutter * 2);
$right-column-width: 30%;
$article-width: 700px;

//----- MEDIA QUERIES

$mq-no-asides: '(min-width: #{$article-width - 150})';
$mq-left-with-aside: '(min-width: #{$page-width})';
$mq-centered-with-asides: '(min-width: #{$page-width-max})';

///////
// CSS VARS
///////

:root {
  --c-primary: $c-primary;
  --c-primary-h: $c-primary-h;
  --c-primary-s: $c-primary-s;
  --c-primary-lighter: $c-primary-lighter;
  --c-primary-lightest: $c-primary-lightest;
  --c-accent: $c-accent;
  --c-accent-lightest: $c-accent-lightest;
  --c-border: $c-border;
  --c-text: $c-text;
  --c-background: var(--c-primary-lightest);
  --c-stripe-img: $c-stripe-img;
  --c-code: HSL(var(--c-primary-h), var(--c-primary-s), 97%);

  --s-gutter: $gutter;
  --s-half-gutter: calc(var(--s-gutter) / 2);
  --s-quarter-gutter: calc(var(--s-gutter) / 4);
  --s-big-gutter: calc(var(--s-gutter) * 2);
  --s-right-column-width: $right-column-width;
  --s-grid-gutter-column: var(--s-big-gutter);
  --s-page-width: $page-width;
  --s-page-width-max: $page-width-max;
  --s-article-width: $article-width;
}

